Fix z-index issues on event page ; Switch to using dark/light header images ; Add test paypal config ; Switch promo video player

--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -89,10 +89,12 @@
 .promo-player-container {
   display: flex;
   flex-direction: column;
+  height: 50vh;
   min-width: 100%;
 
   .promo-buttons-container {
     display: flex;
+    height: 50px;
     justify-content: space-between;
     margin-top: 10px;
 
