--- a/src/assets/styles/pages/_event.scss
+++ b/src/assets/styles/pages/_event.scss
@@ -1,9 +1,6 @@
 .event-page {
-  position: relative;
-
   * {
     font-family: 'Helvetica Neue', Helvetica, sans-serif;
-    z-index: 1;
   }
 
   &__hero-container {
@@ -14,6 +11,10 @@
     justify-content: flex-end;
     padding-bottom: 50px;
     position: relative;
+
+    & > * {
+      z-index: 1;
+    }
   }
 
   &__hero {
@@ -27,7 +28,6 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: -1;
   }
 
   &__heading {
@@ -56,8 +56,8 @@
   }
 
   &__header-name {
-    font-weight: normal;
     font-size: 42px;
+    font-weight: normal;
   }
 
   &__date {
@@ -81,10 +81,18 @@
     padding: 0 12.5vw;
   }
 
+  &__buttons {
+    display: flex;
+
+    & > :not(:first-child) {
+      margin-left: 15px;
+    }
+  }
+
   @media only screen and (max-width: 1450px) {
     &__hero-container {
       height: calc(100vw * 9 / 16);
-      padding-bottom: 100px;
+      padding-bottom: 75px;
       width: 100%;
     }
 
@@ -130,6 +138,10 @@
       font-size: 28px;
     }
 
+    &__header-logo {
+      height: 100px;
+    }
+
     &__subheader {
       font-size: 22px;
       font-weight: normal;
@@ -140,6 +152,15 @@
     &__date {
       font-size: 16px;
       letter-spacing: 1px;
+    }
+
+    &__buttons {
+      flex-direction: column;
+      margin-top: 10px;
+
+      & > :not(:first-child) {
+        margin: 5px 0;
+      }
     }
 
     &__overview {
